# youtubedatavizpoc

./: .gitignore  Dockerfile  README.MD  app.py  docker-compose.yml  pyproject.toml  service.py
app/: app.py  service.py
app/data/: CanaisDireita.xlsx  CanaisEsquerda.xlsx
data/: reportcanais.xlsx
