[tool.poetry]
name = "youtubevizpoc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pandas = "^2.0.3"
dash = "^2.11.1"
plotly = "^5.15.0"
openpyxl = "^3.1.2"
numpy = "^1.25.1"
nltk = "^3.8.1"
wordcloud = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
